# Kangaroo

./: .gitignore  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  balls.xml  simple.xml
src/: Constants.hpp  Formatting.cpp  Formatting.hpp  ThreadUtils.hpp  main.cpp
src/camera/: Camera.cpp  Camera.hpp  Display.hpp  LookAtCamera.hpp  PixelSamplingStrategy.hpp  SquarePixelSamplingStrategy.cpp  SquarePixelSamplingStrategy.hpp
src/camera/tracer/: DepthPathTracer.hpp  Tracer.hpp
src/color/: Color.cpp  Color.hpp  Sample.hpp
src/geometry/: Geometry.cpp  Geometry.hpp  ImportanceRay.cpp  ImportanceRay.hpp  Intersection.cpp  Intersection.hpp  Ray.cpp  Ray.hpp  Sphere.cpp  Sphere.hpp  Surface.hpp  Triangle.hpp
src/material/: BRDFMaterial.cpp  BRDFMaterial.hpp  LambertianMaterial.hpp  Material.hpp  SpecularMaterial.cpp  SpecularMaterial.hpp  TransparentSpecularMaterial.cpp  TransparentSpecularMaterial.hpp
src/sampling/: Sampler.cpp  Sampler.hpp  SpatialSampling.hpp
src/scene/: Render.hpp  RenderLoader.cpp  RenderLoader.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp  SceneObject.cpp  SceneObject.hpp
src/xml/: XmlUtilities.cpp  XmlUtilities.hpp  tinyxml2.cpp
tests/: RayTests.hpp  RenderLoaderTests.hpp  SampleTests.hpp  SamplerTests.hpp  SceneLoaderTests.hpp  SphereTests.hpp  SquarePixelSamplingStrategyTests.hpp  TestUtils.hpp  TriangleTests.hpp  main.cpp
